--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,129 +1,131 @@
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">FilterLADY</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Services</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-<!-- Homepage Starts -->
+    <!-- Page Content -->
+    <div class="container">
 
-<div class="row homepage">
-	<div class="container">
-		<div class="col-md-9 banner-main">
-		</div>
-		<div class="col-md-3">
-			<div class="seller-links">
+        <div class="row" ng-controller = "homeCtrl">
 
-			</div>
-			<div class="seller-links">
-				
-			</div>
-			<div class="seller-links">
-				
-			</div>
-		</div>
-		</div>
-	</div><!-- banner row ends here -->
+            <div class="col-md-3">
+                <p class="lead">Shop Name</p>
+                <div class="list-group">
+                    <a href="#" ng-repeat="category in categories" class="list-group-item">{{category.name}}</a>
+                </div>
+            </div>
 
-	<!-- advertisement -->
-	<div class="row">
-		<div class="container">
-		<div class="col-md-12">
-			<div class="advertisement">
-				<div class="center-align">
-				<h2>Advertisement</h2>
-			</div>
-			</div>
-		</div>
-		</div>
-	</div>
+            <div class="col-md-9">
 
-<!-- advertisement row ends -->
+                <div class="row carousel-holder">
 
-<!--Sorting Starts-->
-<div id="row">
-	<div class="container">
-	<div class="col-md-8 sorting-home">
-		<span class="lead">Featured</span>&nbsp&nbsp
-		<div class="btn-group" data-toggle="buttons">
-  <label class="btn btn-primary active">
-    <input type="radio" name="options" id="option1" autocomplete="off" > MATERIALS
-  </label>
-  <label class="btn btn-primary">
-    <input type="radio" name="options" id="option2" autocomplete="off" checked> SERVICES
-  </label>
-  <label class="btn btn-primary">
-    <input type="radio" name="options" id="option3" autocomplete="off"> RAW MATERIAL
-  </label>
-</div>
-	</div> 
-</div>
-</div>
+                    <div class="col-md-12">
+                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="item active">
+                                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                </div>
+                                <div class="item">
+                                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                </div>
+                                <div class="item">
+                                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                </div>
+                            </div>
+                            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                            </a>
+                            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right"></span>
+                            </a>
+                        </div>
+                    </div>
 
-<!-- sorting ends -->
+                </div>
 
-<!-- featured l>isting starts -->
-<div class="row">
-	<div class="container">
-	<div class="col-md-3 featured-listing">
-	</div>
-	<div class="col-md-3 featured-listing">
-	</div>
-	<div class="col-md-3 featured-listing">
-	</div>
-	<div class="col-md-3 featured-listing">
-	</div>
-	<div class="col-md-3 featured-listing">
-	</div>
-	<div class="col-md-3 featured-listing">
-	</div>
-	</div>
-</div>
+                <div class="row">
 
-<!-- featured listing ends -->
+                    <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="product in products">
+                        <div class="thumbnail">
+                            <img src="http://placehold.it/320x150" alt="">
+                            <div class="caption">
+                                
+                                <h4><a href="#">{{product.title}}</a>
+                                </h4>
+                                <p>See more snippets like this online store item at <a target="_blank" href="http://www.bootsnipp.com">Bootsnipp - http://bootsnipp.com</a>.</p>
+                            </div>
+                            <div class="ratings">
+                                <p class="pull-right">{{product.price | currency}}</p>
+                                <p>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
 
-<!--Top deals Starts-->
-<div id="row">
-	<div class="container">
-	<div class="col-md-8 sorting-home">
-		<span class="lead">Top Deals/Discounts</span>&nbsp&nbsp
-	</div> 
-</div>
-</div>
 
-<!-- top deals ends -->
+ <!--                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <h4><a href="#">Like this template?</a>
+                        </h4>
+                        <p>If you like this template, then check out <a target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">this tutorial</a> on how to build a working review system for your online store!</p>
+                        <a class="btn btn-primary" target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">View Tutorial</a>
+                    </div>
+ -->
+                </div>
 
-<!-- top deals listing starts -->
-<div class="row">
-	<div class="container">
-	<div class="col-md-3 top-listing">
-	</div>
-	<div class="col-md-3 top-listing">
-	</div>
-	<div class="col-md-3 top-listing">
-	</div>
-	<div class="col-md-3 top-listing">
-	</div>
-	</div>
-</div>
+            </div>
 
-<!--  listing ends -->
+        </div>
 
-<!--Blog Starts-->
-<div id="row">
-	<div class="container">
-	<div class="col-md-8 sorting-home">
-		<span class="lead">Blog Posts</span>&nbsp&nbsp
-	</div> 
-</div>
-</div>
+    </div>
+    <!-- /.container -->
 
-<!-- Blog ends -->
+    <div class="container">
 
-<!-- Blog listing starts -->
-<div class="row">
-	<div class="container">
-	<div class="col-md-3 blog-listing">
-	</div>
-	<div class="col-md-3 blog-listing">
-	</div>
-	<div class="col-md-3 blog-listing">
-	</div>
-	</div>
-</div>
+        <hr>
 
-<!-- blog listing ends -->
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Your Website 2014</p>
+                </div>
+            </div>
+        </footer>
+
+    </div>
