--- a/public/views/singleProduct.html
+++ b/public/views/singleProduct.html
@@ -1,114 +1,131 @@
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">FilterLADY</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Services</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-<!-- Product Image -->
+    <!-- Page Content -->
+    <div class="container">
 
-<div class="row homepage">
-	<div class="container">
+        <div class="row" ng-controller = "homeCtrl">
+
+            <div class="col-md-3">
+                <p class="lead">Shop Name</p>
+                <div class="list-group">
+                    <a href="#" ng-repeat="category in categories" class="list-group-item">{{category.name}}</a>
+                </div>
+            </div>
+
+            <div class="col-md-9">
+
+                <div class="row carousel-holder">
+
+                    <div class="col-md-12">
+                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="item active">
+                                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                </div>
+                                <div class="item">
+                                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                </div>
+                                <div class="item">
+                                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                </div>
+                            </div>
+                            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                            </a>
+                            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right"></span>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="row">
+
+                    <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="product in products">
+                        <div class="thumbnail">
+                            <img src="http://placehold.it/320x150" alt="">
+                            <div class="caption">
+                                
+                                <h4><a href="#">{{product.title}}</a>
+                                </h4>
+                                <p>See more snippets like this online store item at <a target="_blank" href="http://www.bootsnipp.com">Bootsnipp - http://bootsnipp.com</a>.</p>
+                            </div>
+                            <div class="ratings">
+                                <p class="pull-right">{{product.price | currency}}</p>
+                                <p>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
 
 
-		<div class="col-md-4" style="margin-top:0px">
-			<div class="prod-images col-md-4">
-				<div class="product-main-image" style="background-image:url('images/bricks.png')">
-				</div>
+ <!--                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <h4><a href="#">Like this template?</a>
+                        </h4>
+                        <p>If you like this template, then check out <a target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">this tutorial</a> on how to build a working review system for your online store!</p>
+                        <a class="btn btn-primary" target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">View Tutorial</a>
+                    </div>
+ -->
+                </div>
 
-				<div class="prod-thumbs">
+            </div>
 
-					<div class="prod-thumb-image" style="background-image:url('images/bricks.png')">
-					</div>
-					<div class="prod-thumb-image" style="background-image:url('images/bricks.png')">
-					</div>
-					<div class="prod-thumb-image" style="background-image:url('images/bricks.png')">
-					</div>
+        </div>
 
-				</div>
-			</div>
-		</div>
+    </div>
+    <!-- /.container -->
 
-<!-- Product Images End -->
+    <div class="container">
 
-		<!-- ______________________________________________________________________________ -->
+        <hr>
 
-<!-- Product details start -->
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Your Website 2014</p>
+                </div>
+            </div>
+        </footer>
 
-<div class="col-md-5 prod-details">
-
-	<span class="prod-title">{[::singleProduct.product.name.first]}</span>
-		</br></br>
-	<span class="prod-price">{[::singleProduct.product.price.min]} - {[::singleProduct.product.price.max]}</span>
-
-	<span class="prod-per">/Sq. Mtr.</span>
-		</br>
-				
-	<span class="prod-min-title">{[::singleProduct.product.minOrder]}</span>
-
-	<span class="prod-min">(Min. Order)</span>
-		</br></br>
-
-		
-	<span><u>BASIC DETAILS</u></span></br>
-		
-		<div class="row">
-			<div class="col-md-6">
-
-				<!-- ng-repeat start for product details -->
-
-				<p  ng-repeat="(key, value) in singleProduct.product.details"><span class="prod-spec-title" >{[key]}: </span><span class="prod-spec">{[value]}</span></p></br></br>
-
-				<!-- ng-repeat ends -->						
-			</div>
-
-		</div>
-
-		
-		<!-- ______________________________________________________________________________ -->
-
-		<!-- Comment Section Starts -->		
-
-		<div class="row">
-
-			<div class="col-md-2 product-contact-form">
-				<textarea class="form-control" rows="5" placeholder="Leave your comment here"></textarea>
-			</div>
-			
-			<div class="col-md-1 prod-buttons">
-			
-				<button type="button" class="btn btn-default dropdown-toggle no-border orange-back " data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Get a Quotation</button>
-
-	    		<button type="button" class="btn btn-default dropdown-toggle no-border green prod-contact-seller" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact Seller</button>
-				
-			</div>
-		</div>
-	</div>
-
-	<!-- Comment section ends -->
-
-	<!-- ______________________________________________________________________________ -->
-
- 
-	<!--Seller Info Starts -->
-
-		<div class="col-md-2 seller-info">
-
-			<span class="side-titles">{[singleProduct.dealer.name]}</span></br>
-
-			<span class="prod-min">{[singleProduct.dealer.city]} | </span>
-				<a href=""><span class="seller-contact">Contact Seller</span></a></br></br>
-
-			<span class="prod-spec-title">Mobile No. :</span>
-
-			<span class="prod-spec">{[singleProduct.dealer.contact]}</span></br>
-
-			<span class="prod-spec-title">Address :</span>
-
-			<span class="prod-spec">{[singleProduct.dealer.address]}</span></br>
-			
-			<button type="button" class="btn btn-default dropdown-toggle no-border green contact-seller" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Get a Quotation</button>
-		</div>
-
-		<!--Seller Info ends -->
-
-	</div> <!-- Container ends -->
-
-</div><!-- row ends -->
-
-<!-- Product Listing Ends -->
-
+    </div>
